--- a/dashboard.html
+++ b/dashboard.html
@@ -23,10 +23,12 @@
         <header>
             <a href="index.html" class="logo">🏗️ CM Automation</a>
             <nav class="nav-links">
-                <a href="#" class="active">Dự án</a>
+                <a href="index.html" class="active">Dự án</a>
                 <a href="forms/daily-update.html">Điểm danh</a>
-                <a href="#">Tài chính</a>
-                <a href="#">Báo cáo</a>
+                <a href="dashboard.html">Tài chính</a>
+                <a href="index.html#solutions">Báo cáo</a>
+                <a href="blog/index.html">Blog</a>
+                <a href="podcast/index.html">Podcast</a>
             </nav>
             <div style="display: flex; gap: 1rem; align-items: center;">
                 <div id="alertDot"
