--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               <div style="height: 150px; background: var(--slate-dark); border-radius: 0.5rem; margin-bottom: 1rem; overflow: hidden;">
                   <img src="${post.image}" alt="${post.title}" style="width: 100%; height: 100%; object-fit: cover;" onerror="this.src='https://api.placeholder/400/200'">
               </div>
-              <div style="font-size: 0.8rem; color: var(--yellow); margin-bottom: 0.5rem;">${post.date} • ${post.category}</div>
+              <div style="font-size: 0.8rem; color: var(--yellow); margin-bottom: 0.5rem;">${post.date} • ${post.category || (post.tags && post.tags[0]) || 'Blog'}</div>
               <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem; line-height: 1.4;">${post.title}</h3>
               <p style="font-size: 0.9rem; color: var(--text-muted); line-height: 1.5;">${post.excerpt || post.description}</p>
             </div>
